feat: wire up inputs + onClick handlers
